[tool.poetry]
name = "sae-jailbreaking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.10"
fastapi = "^0.115.0"
transformer-lens = "^2.6.0"
transformers = "^4.44.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
