[tool.poetry]
name = "sae-jailbreaking"
version = "0.1.0"
description = ""
authors = ["Jenny Vega <jluciavg11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.10"
fastapi = "^0.115.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
sae-lens = {git = "git@github.com:jbloomAus/SAELens.git"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
